migration_backup/k8s_ainfluencer/staging/content-processing-service-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  labels:
    app: content-processing-service
    service-type: content-service
  name: content-processing-service-vs
  namespace: ainflue-staging
spec:
  hosts:
  - content-processing-service.ainflue-staging.svc.cluster.local
  http:
  - match:
    - uri:
        prefix: /
    retries:
      attempts: 3
      perTryTimeout: 10s
      retryOn: gateway-error,connect-failure,refused-stream
    route:
    - destination:
        host: content-processing-service.ainflue-staging.svc.cluster.local
        port:
          number: 8002
    timeout: 30s
